# compactdata-python

./: .gitignore  LICENSE  README.md  cfg.txt  pyproject.toml  tokens.txt
compactdata/: __init__.py  char_constants.py  decoder.py  encoder.py  escapes.py  exceptions.py  grammar_rules.py  token_definitions.py  unescapes.py
