[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compactdata"
version = "0.0.2"
authors = [
  { name="NUM Technology", email="developer@num.uk" },
]
description = "CompactData"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NUMtechnology/compactdata-python"
"Bug Tracker" = "https://github.com/NUMtechnology/compactdata-python/issues"